--- a/app/templates/pages/home.hbs
+++ b/app/templates/pages/home.hbs
@@ -1,9 +1,11 @@
 {{!Главная}}
 
-{{> layout/head page-title="Главная"}}
+{{>layout/head page-title="Главная"}}
 
-{{> layout/header current-page="main"}}
+{{>layout/header current-page="main"}}
 
-{{> blocks/home/01_intro }}
+<div class="home-container">
+  {{>blocks/home/01_intro}}
+</div>
 
-{{> layout/footer }}
+{{>layout/footer}}
