--- a/app/templates/partials/blocks/home/01_intro.hbs
+++ b/app/templates/partials/blocks/home/01_intro.hbs
@@ -1,1 +1,10 @@
-<div class="intro"></div>
+<section class="home-intro">
+  <div class="home-intro__container container">
+    <div class="home-intro__left">
+      {{>blocks/home/components/home-slider}}
+    </div>
+    <div class="home-intro__right">
+      {{>blocks/home/components/home-blog}}
+    </div>
+  </div>
+</section>
