--- a/app/css/config/colors.scss
+++ b/app/css/config/colors.scss
@@ -35,6 +35,7 @@
   --color-white-80: #{transparentize(#FFFFFF, 0.2)};
   --color-white-70: #{transparentize(#FFFFFF, 0.3)};
   --color-white-50: #{transparentize(#FFFFFF, 0.5)};
+  --color-white-30: #{transparentize(#FFFFFF, 0.7)};
   --color-white-20: #{transparentize(#FFFFFF, 0.8)};
   --color-white-10: #{transparentize(#FFFFFF, 0.9)};
 }
@@ -66,6 +67,7 @@ $color-white: var(--color-white-100);
 $color-white-80: var(--color-white-80);
 $color-white-70: var(--color-white-70);
 $color-white-50: var(--color-white-50);
+$color-white-30: var(--color-white-30);
 $color-white-20: var(--color-white-20);
 $color-white-10: var(--color-white-10);
 $color-black: #000000;
