--- a/app/css/core/svg/_spriteInline.scss
+++ b/app/css/core/svg/_spriteInline.scss
@@ -5,6 +5,26 @@
   fill: currentColor;
 }
 
+.icon-action--arrow-left {
+  width: 10px;
+  height: 12px;
+}
+.icon-action--arrow-right {
+  width: 12px;
+  height: 14px;
+}
+.icon-action--download {
+  width: 22px;
+  height: 22px;
+}
+.icon-action--expand-down {
+  width: 12px;
+  height: 12px;
+}
+.icon-action--search {
+  width: 19px;
+  height: 20px;
+}
 .icon-popup-close {
   width: 26px;
   height: 26px;
