--- a/app/templates/partials/core/picture-source.hbs
+++ b/app/templates/partials/core/picture-source.hbs
@@ -3,5 +3,5 @@
       data-srcset="../assets/images/{{img}}.webp, ../assets/images/{{img}}@2x.webp 2x" type="image/webp">
 {{/ifUseWebp}}
 <source {{#if media}}media="({{media}})" {{/if}}
-    data-srcset="../assets/images/{{img}}.{{ext}}, ../assets/images/{{img}}@2x.{{ext}} 2x"
+    data-srcset="../assets/images/{{img}}.{{ext}}{{#if no-2x}}{{else}}, ../assets/images/{{img}}@2x.{{ext}} 2x{{/if}}"
   {{#ifCond ext 'jpg'}} type="image/jpeg"{{else}} type="image/png"{{/ifCond}}>
