--- a/app/css/blocks/home/home.scss
+++ b/app/css/blocks/home/home.scss
@@ -1,5 +1,7 @@
 .home-container {
-  > * {
+  padding: 22.5px 0;
+
+  > * + * {
     margin-top: 22.5px;
   }
 }
@@ -11,11 +13,44 @@
 
   &__left {
     flex: 1 1 floor((100% / 3) * 2);
+    max-width: floor((100% / 3) * 2);
   }
 
   &__right {
     flex: 1 1 floor((100% / 3));
     margin-left: 24px;
+  }
+}
+
+.home-slider {
+  &__content {
+    position: relative;
+  }
+
+  &__nav {
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    left: 20px;
+    z-index: z(default);
+    transform: translateY(-50%);
+  }
+
+  .slider-nav {
+    justify-content: space-between;
+
+    &__btn {
+      color: $color-white;
+      background-color: transparentize($color-black, 0.5);
+
+      &:hover {
+        background-color: transparentize($color-black, 0.2);
+      }
+
+      &.disabled {
+        opacity: 0;
+      }
+    }
   }
 }
 
@@ -35,17 +70,22 @@
       z-index: z(backdrop);
       width: 100%;
       height: 100%;
+      object-fit: cover;
+      object-position: center center;
     }
   }
 
   &__container {
-    @include fill;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    bottom: 10px;
+    left: 10px;
   }
 
   &__content {
-    height: auto;
-    margin: 10px;
-    padding: 20px 30px;
+    height: 100%;
+    padding: 30px 40px;
     border: 1px solid $color-white-30;
   }
 
@@ -60,7 +100,9 @@
   }
 
   &__list {
+    max-width: 350px;
     margin-top: 30px;
+    margin-left: 10%;
     font-size: 14px;
     line-height: 1.5;
 
