--- a/app/templates/partials/blocks/home/components/home-blog.hbs
+++ b/app/templates/partials/blocks/home/components/home-blog.hbs
@@ -1,3 +1,17 @@
 <div class="home-blog">
-
+  <div class="home-blog__item">
+    {{>widgets/blog-card
+        title="XVII Сибирский форум хлебопечения отменен"
+        img="home/blog/01"
+        ext="png"
+    }}
+  </div>
+  <div class="home-blog__item">
+    {{>widgets/blog-card
+        title="СИБИРСКИЙ ХЛЕБОПЕКАРНЫЙ ЦЕНТР МЫ ОТКРЫТЫ И РАБОТАЕМ ДЛЯ ВАС!"
+        white=true
+        img="home/blog/02"
+        ext="jpg"
+    }}
+  </div>
 </div>
