--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -1,6 +1,6 @@
 // Libraries
 @import "~normalize-scss/sass/normalize/import-now";
-@import '~swiper/swiper';
+@import '~swiper/swiper-bundle';
 
 // Base
 @import 'config/index';
