--- a/app/templates/partials/blocks/home/components/home-slider.hbs
+++ b/app/templates/partials/blocks/home/components/home-slider.hbs
@@ -20,5 +20,8 @@
     <div class="home-slider__nav">
       {{>components/slider-nav js-class="home-slider"}}
     </div>
+    <div class="home-slider__pagination">
+      <div class="js-home-slider__pagination"></div>
+    </div>
   </div>
 </div>
