--- a/app/css/blocks/home/home.scss
+++ b/app/css/blocks/home/home.scss
@@ -8,23 +8,36 @@
 
 .home-intro {
   &__container {
-    display: flex;
+    @include media(tabletSmall, up) {
+      display: flex;
+    }
   }
 
   &__left {
-    flex: 1 1 floor((100% / 3) * 2);
-    max-width: floor((100% / 3) * 2);
+    @include media(tabletSmall, up) {
+      flex: 1 1 floor((100% / 3) * 2);
+      max-width: floor((100% / 3) * 2);
+    }
   }
 
   &__right {
-    flex: 1 1 floor((100% / 3));
-    margin-left: 22.5px;
+    @include media(tabletSmall, up) {
+      flex: 1 1 floor((100% / 3));
+      margin-left: 22.5px;
+    }
+
+    @include media(tabletSmall) {
+      margin-top: 22.5px;
+    }
   }
 }
 
 .home-slider {
+  height: 100%;
+
   &__content {
     position: relative;
+    height: 100%;
   }
 
   &__nav {
@@ -34,6 +47,33 @@
     left: 20px;
     z-index: z(default);
     transform: translateY(-50%);
+
+    @include media(mobile) {
+      display: none;
+    }
+  }
+
+  &__pagination {
+    @include media(mobile, up) {
+      display: none;
+    }
+
+    @include media(mobile) {
+      display: flex;
+      justify-content: center;
+      margin-top: 5px;
+    }
+
+    span {
+      @include media(mobile) {
+        margin: 0 2px;
+        @include transition;
+      }
+    }
+
+    .swiper-pagination-bullet-active {
+      background: $color-primary;
+    }
   }
 
   .slider-nav {
@@ -56,18 +96,15 @@
 
 .home-slide {
   position: relative;
+  height: auto;
   color: $color-white;
 
   &__bg {
-    &::after {
-      content: '';
-      display: block;
-      padding-top: 60%;
-    }
+    @include fill;
+    z-index: z(backdrop);
 
     img {
-      @include fill;
-      z-index: z(backdrop);
+      display: block;
       width: 100%;
       height: 100%;
       object-fit: cover;
@@ -76,17 +113,17 @@
   }
 
   &__container {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    bottom: 10px;
-    left: 10px;
+    height: 100%;
+    outline: 1px solid $color-white-30;
+    outline-offset: -10px;
   }
 
   &__content {
-    height: 100%;
     padding: 30px 40px;
-    border: 1px solid $color-white-30;
+
+    @include media(mobile) {
+      padding: 35px 25px;
+    }
   }
 
   &__title {
@@ -107,7 +144,9 @@
     line-height: 1.5;
 
     li {
-      margin-left: 25px;
+      @include media(mobile, up) {
+        margin-left: 25px;
+      }
 
       &::before {
         content: '';
@@ -128,11 +167,41 @@
   flex-direction: column;
   height: 100%;
 
+  @include media(tabletSmall, only) {
+    flex-direction: row;
+  }
+
   > * + * {
     margin-top: 22.5px;
+
+    @include media(tabletSmall, only) {
+      margin-top: 0;
+      margin-left: 22.5px;
+    }
   }
 
   &__item {
     flex: 1 1 50%;
+  }
+}
+
+.home-partners {
+  &__container {
+    position: relative;
+    outline: 1px solid transparentize($color-black, 0.7);
+    outline-offset: -10px;
+  }
+
+  &__bg {
+
+  }
+
+  &__content {
+  }
+
+  &__text {
+    > * + * {
+      margin-top: 10px;
+    }
   }
 }
