--- a/app/templates/partials/blocks/home/02_partners.hbs
+++ b/app/templates/partials/blocks/home/02_partners.hbs
@@ -1,7 +1,12 @@
 <section class="section home-partners">
   <div class="container">
     <div class="section__container home-partners__container">
-      <div class="home-partners__bg"></div>
+      <div class="home-partners__bg">{{>components/image
+          no-2x=true
+          img="home/partners/01"
+          ext="jpg"
+      }}
+      </div>
       <div class="home-partners__content">
         <header class="section__header">
           <h2 class="section__title">РАСКРОЙТЕ ПОТЕНЦИАЛ СВОЕГО БИЗНЕСА НА ВСЕ 100% ВМЕСТЕ С "СИБИРСКИМ ХЛЕБОПЕКАРНЫМ
