--- a/app/css/blocks/home/home.scss
+++ b/app/css/blocks/home/home.scss
@@ -188,18 +188,43 @@
 .home-partners {
   &__container {
     position: relative;
+    z-index: z(backdrop);
     outline: 1px solid transparentize($color-black, 0.7);
     outline-offset: -10px;
   }
 
   &__bg {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: z(backdrop);
+    max-width: 385px;
 
+    @include media(tabletSmall) {
+      display: none;
+    }
+
+    img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      object-position: bottom right;
+    }
   }
 
   &__content {
+    @include media(tabletSmall, up) {
+      max-width: 68%;
+    }
   }
 
   &__text {
+    @include media(tabletSmall, up) {
+      max-width: 70%;
+    }
+
     > * + * {
       margin-top: 10px;
     }
