--- a/app/templates/pages/home.hbs
+++ b/app/templates/pages/home.hbs
@@ -7,6 +7,7 @@
 <div class="home-container">
   {{>blocks/home/01_intro}}
   {{>blocks/home/02_partners}}
+  {{>blocks/home/03_catalog}}
 </div>
 
 {{>layout/footer}}
