--- a/app/templates/pages/home.hbs
+++ b/app/templates/pages/home.hbs
@@ -8,6 +8,7 @@
   {{>blocks/home/01_intro}}
   {{>blocks/home/02_partners}}
   {{>blocks/home/03_catalog}}
+  {{>blocks/home/04_about}}
 </div>
 
 {{>layout/footer}}
