--- a/app/css/blocks/common/section.scss
+++ b/app/css/blocks/common/section.scss
@@ -37,5 +37,13 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 1.5;
+
+    p a {
+      color: $color-primary;
+
+      &:hover {
+        color: $color-font-dark;
+      }
+    }
   }
 }
