--- a/app/templates/partials/blocks/home/02_partners.hbs
+++ b/app/templates/partials/blocks/home/02_partners.hbs
@@ -1,11 +1,12 @@
 <section class="section home-partners">
   <div class="container">
     <div class="section__container home-partners__container">
-      <div class="home-partners__bg">{{>components/image
-          no-2x=true
-          img="home/partners/01"
-          ext="jpg"
-      }}
+      <div class="home-partners__bg">
+        {{>components/image
+            no-2x=true
+            img="home/partners/01"
+            ext="jpg"
+        }}
       </div>
       <div class="home-partners__content">
         <header class="section__header">
