add: reasons; minor fixes;

--- a/app/templates/pages/home.hbs
+++ b/app/templates/pages/home.hbs
@@ -9,6 +9,7 @@
   {{>blocks/home/02_partners}}
   {{>blocks/home/03_catalog}}
   {{>blocks/home/04_about}}
+  {{>blocks/home/05_reasons}}
 </div>
 
 {{>layout/footer}}
