--- a/app/css/blocks/home/home.scss
+++ b/app/css/blocks/home/home.scss
@@ -284,11 +284,14 @@
     padding-top: 16px;
     padding-bottom: 14px;
     width: 100%;
-    max-width: 255px;
     font-size: 10px;
     color: $color-font-dark;
     letter-spacing: 0.05em;
     text-transform: uppercase;
+
+    @include media(mobile, up) {
+      max-width: 255px;
+    }
   }
 
   .section__content {
@@ -363,6 +366,55 @@
     a {
       text-transform: uppercase;
       font-weight: bold;
+    }
+  }
+}
+
+.home-reasons {
+  &__container {
+    position: relative;
+    overflow: hidden;
+  }
+
+  &__bg {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: -90px;
+    max-width: 320px;
+
+    @include media(mobile) {
+      display: none;
+    }
+
+    img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-position: bottom right;
+      object-fit: contain;
+    }
+  }
+
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  &__item {
+    flex: 1 1 floor(100% / 3);
+    max-width: floor(100% / 3);
+    border: 1px solid $color-gray-20;
+    @include transition;
+
+    @include media(tabletSmall) {
+      flex: 1 1 50%;
+      max-width: 50%;
+    }
+
+    @include media(mobile) {
+      flex: 1 1 100%;
+      max-width: 100%;
     }
   }
 }
