--- a/app/css/core/svg/_sprite.scss
+++ b/app/css/core/svg/_sprite.scss
@@ -1,3 +1,4 @@
-$icons: (sprite: (width: 26px, height: 26px, pngPath: '../assets/images/sprite.png', svgPath: '../assets/images/sprite.svg'),
-popup-close: (width: 26px, height: 26px, backgroundX: 0px, backgroundY: 0px),
+$icons: (sprite: (width: 52px, height: 52px, pngPath: '../assets/images/sprite.png', svgPath: '../assets/images/sprite.svg'),
+comment: (width: 26px, height: 26px, backgroundX: 0px, backgroundY: 0px),
+popup-close: (width: 26px, height: 26px, backgroundX: -26px, backgroundY: -26px),
 );
