--- a/app/templates/pages/home.hbs
+++ b/app/templates/pages/home.hbs
@@ -10,6 +10,7 @@
   {{>blocks/home/03_catalog}}
   {{>blocks/home/04_about}}
   {{>blocks/home/05_reasons}}
+  {{>blocks/home/06_help}}
 </div>
 
 {{>layout/footer}}
