upd: help; add: popup

--- a/app/templates/pages/home.hbs
+++ b/app/templates/pages/home.hbs
@@ -12,5 +12,7 @@
   {{>blocks/home/05_reasons}}
   {{>blocks/home/06_help}}
 </div>
+<!--Popups-->
+{{>popups/help-open id="help-open"}}
 
 {{>layout/footer}}
