--- a/app/templates/partials/blocks/home/06_help.hbs
+++ b/app/templates/partials/blocks/home/06_help.hbs
@@ -30,7 +30,7 @@
             <li>Участие специалистов клиента в мастер-классах и семинарах СибХЦ</li>
           </ul>
           <div class="home-help__action">
-            <button class="home-help__btn" type="button">ХОЧУ ОТКРЫТЬ СВОЮ ПЕКАРНЮ!</button>
+            <button class="home-help__btn js-popup-open" type="button" data-popup="help-open">Хочу открыть свою пекарню!</button>
           </div>
         </div>
       </div>
