--- a/app/templates/pages/home.hbs
+++ b/app/templates/pages/home.hbs
@@ -11,6 +11,7 @@
   {{>blocks/home/04_about}}
   {{>blocks/home/05_reasons}}
   {{>blocks/home/06_help}}
+  {{>blocks/home/07_events}}
 </div>
 <!--Popups-->
 {{>popups/help-open id="help-open"}}
