--- a/app/templates/partials/blocks/home/03_catalog.hbs
+++ b/app/templates/partials/blocks/home/03_catalog.hbs
@@ -71,8 +71,8 @@
            }}
           </li>
         </ul>
-        <div class="home-catalog__actions">
-          <a href="#" class="home-catalog__btn">Все товары</a>
+        <div class="section__action">
+          <a href="#" class="section__action-btn">Все товары</a>
         </div>
       </div>
     </div>
