--- a/app/templates/partials/blocks/home/06_help.hbs
+++ b/app/templates/partials/blocks/home/06_help.hbs
@@ -29,8 +29,8 @@
             <li>Поставка сырья с доставкой клиенту режимным автотранспортом</li>
             <li>Участие специалистов клиента в мастер-классах и семинарах СибХЦ</li>
           </ul>
-          <div class="home-help__action">
-            <button class="home-help__btn js-popup-open" type="button" data-popup="help-open">Хочу открыть свою пекарню!</button>
+          <div class="section__action">
+            <button class="section__action-btn js-popup-open" type="button" data-popup="help-open">Хочу открыть свою пекарню!</button>
           </div>
         </div>
       </div>
