--- a/app/templates/pages/home.hbs
+++ b/app/templates/pages/home.hbs
@@ -12,6 +12,7 @@
   {{>blocks/home/05_reasons}}
   {{>blocks/home/06_help}}
   {{>blocks/home/07_events}}
+  {{>blocks/home/08_faq}}
 </div>
 <!--Popups-->
 {{>popups/help-open id="help-open"}}
