--- a/app/templates/partials/blocks/home/05_reasons.hbs
+++ b/app/templates/partials/blocks/home/05_reasons.hbs
@@ -1,7 +1,7 @@
 <section class="section home-reasons">
   <div class="container">
     <div class="section__container home-reasons__container">
-      <header class="section__header">
+      <header class="section__header section__header--closer">
         <h2 class="section__title section__title--center">5 ПРИЧИН ВЫБРАТЬ "СИБИРСКИЙ ХЛЕБОПЕКАРНЫЙ ЦЕНТР"</h2>
       </header>
       <div class="section__content">
