--- a/app/css/blocks/common/section.scss
+++ b/app/css/blocks/common/section.scss
@@ -10,7 +10,13 @@
 
   &__header {
     + * {
-      margin-top: 20px;
+      margin-top: 40px;
+    }
+
+    &--closer {
+      + * {
+        margin-top: 20px;
+      }
     }
   }
 
