--- a/app/css/popups/base.scss
+++ b/app/css/popups/base.scss
@@ -9,7 +9,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  background: $color-gray-100-70;
+  background: transparentize($color-black, 0.3);
   @include transition(all, 350ms, ease);
   overflow-x: hidden;
   cursor: pointer;
