--- a/app/templates/partials/blocks/home/02_partners.hbs
+++ b/app/templates/partials/blocks/home/02_partners.hbs
@@ -9,7 +9,7 @@
         }}
       </div>
       <div class="home-partners__content">
-        <header class="section__header">
+        <header class="section__header section__header--closer">
           <h2 class="section__title">РАСКРОЙТЕ ПОТЕНЦИАЛ СВОЕГО БИЗНЕСА НА ВСЕ 100% ВМЕСТЕ С "СИБИРСКИМ ХЛЕБОПЕКАРНЫМ
             ЦЕНТРОМ"</h2>
         </header>
