--- a/app/templates/partials/blocks/home/04_about.hbs
+++ b/app/templates/partials/blocks/home/04_about.hbs
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="section__container home-about__container">
       <div class="home-about__left">
-        <header class="section__header">
+        <header class="section__header section__header--closer">
           <h2 class="section__title">Немного о компании</h2>
         </header>
         <div class="section__content">
