--- a/app/templates/partials/blocks/home/08_faq.hbs
+++ b/app/templates/partials/blocks/home/08_faq.hbs
@@ -5,8 +5,42 @@
         <h2 class="section__title section__title--center">ЧАСТО ЗАДАВАЕМЫЕ ВОПРОСЫ</h2>
       </header>
       <div class="section__content">
-        <ul class="home-events__list">
-
+        <ul class="home-faq__list">
+          <li>
+            {{>widgets/faq-item
+                o="01."
+                q="Можете ли вы осуществить доставку продукции под заказ?"
+                a="Партнерам СибХЦ все заказанные ингредиенты и сырье доставляет транспортная компания «Сибреф» (входит в группу компаний ЗАО «Красноярский дрожжевой завод»).  Доставка осуществляется машинами - рефрижераторами, что гарантирует соблюдение  температурного режима и  других  условий хранения товара во время транспортировки.  Сырье и ингредиенты доставляются на следующий день после заявки, иногда в день заявки (по Красноярску, в населенные пункты Красноярского края, Хакасии ). Доставка продукции производится бесплатно."
+            }}
+          </li>
+          <li>
+            {{>widgets/faq-item
+                o="02."
+                q="На ваши мастер классы могут попасть только представители ваших клиентов?"
+                a="Все партнеры нашей компании получают персональные приглашения на проводимые в Демонстрационном центре СибХЦ мастер-классы. Но если технологи предприятия, не являющегося нашим клиентом, заинтересовались нашей продукцией и хотят попасть на наш мастер-класс, им нужно позвонить по телефону:+7 (391) 221 15 26. Мы будем рады их пригласить."
+            }}
+          </li>
+          <li>
+            {{>widgets/faq-item
+                o="03."
+                q="Насколько безопасна ваша продукция, как осуществляется контроль качества?"
+                a="Все предлагаемая СибХЦ линейка ингредиентов и сырья проходит обязательный контроль качества и имеет соответствующие сертификаты. Наши ингредиенты позволяют производить вкусную и полезную хлебопекарную и кондитерскую продукцию и (важно) дают возможность упростить и ускорить технологический процесс. Партнерам предоставляется полное бесплатное технологическое сопровождение, т. е. от телефонных консультаций по хранению и применению продукта до участия нашего технолога в производственном процессе. Это является гарантией качества конечного продукта."
+            }}
+          </li>
+          <li>
+            {{>widgets/faq-item
+                o="04."
+                q="Можете ли вы осуществить доставку продукции под заказ?"
+                a="Партнерам СибХЦ все заказанные ингредиенты и сырье доставляет транспортная компания «Сибреф» (входит в группу компаний ЗАО «Красноярский дрожжевой завод»). Доставка осуществляется машинами - рефрижераторами, что гарантирует соблюдение температурного режима и других условий хранения товара во время транспортировки. Сырье и ингредиенты доставляются на следующий день после заявки, иногда в день заявки (по Красноярску, в населенные пункты Красноярского края, Хакасии ). Доставка продукции производится бесплатно."
+            }}
+          </li>
+          <li>
+            {{>widgets/faq-item
+                o="05."
+                q="Какие преимущества получают ваши партнеры?"
+                a="Наша компания работает на рынке уже более 10 лет. У нас – индивидуальный подход и гибкая маркетинговая политика. Линейка предлагаемой продукции – это более 500 наименований ингредиентов и сырья. У нас есть все, что необходимо для производства ароматного хлеба, аппетитных булочек, изысканных тортов и пирожных. В том числе – ряд эксклюзивных сырьевых продуктов из Белоруссии, Австрии, Германии, Китая. В нашем Демонстрационном центре лучшие технологи отрасли проводят бесплатные мастер-классы, где делятся секретами вкусной выпечки. Это и классическая рецептура, и новинки хлебопечения и кондитерского производства, – все, что пользуется спросом."
+            }}
+          </li>
         </ul>
       </div>
     </div>
