--- a/app/templates/pages/home.hbs
+++ b/app/templates/pages/home.hbs
@@ -13,6 +13,7 @@
   {{>blocks/home/06_help}}
   {{>blocks/home/07_events}}
   {{>blocks/home/08_faq}}
+  {{>blocks/home/09_map}}
 </div>
 <!--Popups-->
 {{>popups/help-open id="help-open"}}
