--- a/app/css/layout/footer-top.scss
+++ b/app/css/layout/footer-top.scss
@@ -50,21 +50,19 @@
       @include media(mobile) {
         width: 100%;
         min-width: unset;
-        margin: 0;
-      }
-    }
-
-    li {
-      margin-bottom: 15px;
-
-      @include media(mobile) {
-        margin-bottom: 10px;
+        margin-right: 0;
       }
     }
 
     a {
+      display: inline-block;
+      padding-bottom: 15px;
       font-size: 14px;
       line-height: 1.6;
+
+      @include media(mobile) {
+        padding-bottom: 10px;
+      }
 
       &:hover {
         color: $color-primary-hover;
