--- a/app/templates/partials/blocks/footer/footer-top.hbs
+++ b/app/templates/partials/blocks/footer/footer-top.hbs
@@ -6,7 +6,7 @@
     <div class="footer-top__nav">
       <ul>
         <li><a href="#">Главная</a></li>
-        <li><a href="#">О компаии</a></li>
+        <li><a href="#">О компании</a></li>
         <li><a href="#">Каталог товаров</a></li>
         <li><a href="#">Блог</a></li>
         <li><a href="#">Контакты</a></li>
