--- a/app/templates/partials/blocks/home/09_map.hbs
+++ b/app/templates/partials/blocks/home/09_map.hbs
@@ -1,7 +1,3 @@
-<section class="home-map">
-  <div class="home-map__canvas">
-    <script type="text/javascript" charset="utf-8" defer
-            src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A13b9e5fdd85075678126f7db86261f1afb33bb2f7392009daa4896ff0b287bce&amp;width=100%25&amp;height=600&amp;lang=ru_RU&amp;scroll=false">
-    </script>
-  </div>
+<section class="home-map ">
+  <div class="home-map__canvas js-ymap"></div>
 </section>
