--- a/app/templates/partials/ui-kit/core/widget.hbs
+++ b/app/templates/partials/ui-kit/core/widget.hbs
@@ -1,4 +1,4 @@
-<div class="ui-widgets__cell" {{#if width}}style="flex-basis:{{width}}%"{{/if}}>
+<div class="ui-widgets__cell" {{#if width}}style="flex-basis:{{width}}{{#if px}}px{{else}}%{{/if}}"{{/if}}>
   <div class="ui-widgets__widget{{#if background}} ui-widgets__widget--background{{/if}}">
     <span class="ui-widgets__title">{{title}}</span>
     <div class="ui-widgets__content">
