add Sidebar, Contacts base

--- a/app/templates/pages/home.hbs
+++ b/app/templates/pages/home.hbs
@@ -4,7 +4,7 @@
 
 {{>layout/header current-page="main"}}
 
-<div class="home-container">
+<main class="home-container">
   {{>blocks/home/01_intro}}
   {{>blocks/home/02_partners}}
   {{>blocks/home/03_catalog}}
@@ -14,7 +14,7 @@
   {{>blocks/home/07_events}}
   {{>blocks/home/08_faq}}
   {{>blocks/home/09_map}}
-</div>
+</main>
 <!--Popups-->
 {{>popups/help-open id="help-open"}}
 
