--- a/app/templates/partials/blocks/header/header-main.hbs
+++ b/app/templates/partials/blocks/header/header-main.hbs
@@ -5,7 +5,7 @@
         <span class="header-main__close-icon"></span>
       </button>
     </div>
-    <nav class="header-main__menu">
+    <nav class="header-main__menu" role="navigation">
       <ul class="header-main__list">
         <li class="header-main__item">
           <a class="header-main__link{{#ifCond current-page 'main'}} active{{/ifCond}}" href="#">главная</a>
