--- a/app/templates/partials/widgets/faq-item.hbs
+++ b/app/templates/partials/widgets/faq-item.hbs
@@ -4,7 +4,7 @@
       <span class="faq-item__order">{{o}}</span>
       <span class="faq-item__title">{{q}}</span>
       <div class="faq-item__icon">
-        <i class="faq-item__icon-container"></i>
+        <i class="icon-arrowDown"></i>
       </div>
     </div>
     <div class="faq-item__content js-accord__body">
