--- a/app/css/core/reset.scss
+++ b/app/css/core/reset.scss
@@ -4,9 +4,13 @@
   margin: 0;
   box-sizing: border-box;
 
-  &:before,
-  &:after {
+  &::before,
+  &::after {
     box-sizing: border-box;
+  }
+
+  &:focus {
+    outline: 1px solid $color-primary-hover;
   }
 }
 
@@ -71,8 +75,6 @@ nav {
   margin: 0;
   list-style-type: none;
 }
-
-
 
 a {
   color: inherit;
