--- a/app/css/widgets/faq-item.scss
+++ b/app/css/widgets/faq-item.scss
@@ -28,44 +28,6 @@
     margin-left: auto;
   }
 
-  &__icon-container {
-    position: relative;
-    display: inline-flex;
-    width: 11px;
-    height: 12px;
-
-    &::before,
-    &::after {
-      position: absolute;
-      top: 50%;
-      content: '';
-      display: block;
-      width: 60%;
-      height: 2px;
-      border-radius: 2px;
-      background-color: $color-gray-100;
-    }
-
-    &::before {
-      left: 0;
-      transform: translateY(-50%) rotate(45deg);
-    }
-
-    &::after {
-      right: 0;
-      transform: translateY(-50%) rotate(-45deg);
-    }
-
-    .opened & {
-      transform: rotate(180deg);
-
-      &::before,
-      &::after {
-        background-color: $color-primary;
-      }
-    }
-  }
-
   &__title {
     @include media(mobile) {
       font-size: 12px;
@@ -95,6 +57,17 @@
 
     @include media(mobile) {
       padding: 20px;
+    }
+  }
+
+  &.opened  {
+    .icon-arrowDown {
+      transform: rotate(180deg);
+
+      &::before,
+      &::after {
+        background-color: $color-primary;
+      }
     }
   }
 }
