upd Sidebar, finish Contacts

--- a/app/css/blocks/common/_index.scss
+++ b/app/css/blocks/common/_index.scss
@@ -1,4 +1,5 @@
 @import "section";
 @import "icons";
-@import "inner-container";
+@import "internal-template";
 @import "sidebar";
+@import "simple-map";
