add Shop page, minor fixes

--- a/app/css/blocks/common/sidebar.scss
+++ b/app/css/blocks/common/sidebar.scss
@@ -4,6 +4,7 @@
 
     &--parent {
       position: relative;
+      z-index: z(default) + 1;
 
       &:focus,
       &:focus-within,
@@ -26,6 +27,10 @@
         }
 
         .sidebar-list__submenu {
+          @include media(tabletSmall, up) {
+            @include shadow(md);
+          }
+
           @include media(tabletSmall) {
             max-height: 200px;
           }
