--- a/app/css/blocks/common/internal-template.scss
+++ b/app/css/blocks/common/internal-template.scss
@@ -43,6 +43,10 @@
     font-weight: 900;
     line-height: 32px;
     text-transform: uppercase;
+
+    &--big {
+      font-size: 24px;
+    }
   }
 
   &__content {
