--- a/app/templates/partials/blocks/home/03_catalog.hbs
+++ b/app/templates/partials/blocks/home/03_catalog.hbs
@@ -4,66 +4,65 @@
       <header class="section__header">
         <h2 class="section__title section__title--center">КАТАЛОГ ТОВАРОВ</h2>
       </header>
-      <div class="section__content">
-        <ul class="home-catalog__list">
-          <li class="home-catalog__item">
+      <div class="section__content shop-catalog">
+        <ul class="shop-catalog__list">
+          <li class="shop-catalog__item">
            {{>widgets/catalog-item
-               no-2x=true
                img="home/catalog/ex"
                ext="png"
                title="Дрожжи"
            }}
           </li>
-          <li class="home-catalog__item">
+          <li class="shop-catalog__item">
            {{>widgets/catalog-item
                img="home/catalog/ex"
                ext="png"
                title="Смеси и концентраты"
            }}
           </li>
-          <li class="home-catalog__item">
+          <li class="shop-catalog__item">
            {{>widgets/catalog-item
                img="home/catalog/ex"
                ext="png"
                title="Улучшители"
            }}
           </li>
-          <li class="home-catalog__item">
+          <li class="shop-catalog__item">
            {{>widgets/catalog-item
                img="home/catalog/ex"
                ext="png"
                title="Маргарин"
            }}
           </li>
-          <li class="home-catalog__item">
+          <li class="shop-catalog__item">
            {{>widgets/catalog-item
                img="home/catalog/ex"
                ext="png"
                title="Глазури и кремы"
            }}
           </li>
-          <li class="home-catalog__item">
+          <li class="shop-catalog__item">
            {{>widgets/catalog-item
                img="home/catalog/ex"
                ext="png"
                title="Конфитюры и повидло"
            }}
           </li>
-          <li class="home-catalog__item">
+          <li class="shop-catalog__item">
            {{>widgets/catalog-item
                img="home/catalog/ex"
                ext="png"
                title="Гели"
            }}
           </li>
-          <li class="home-catalog__item">
+          <li class="shop-catalog__item">
            {{>widgets/catalog-item
                img="home/catalog/ex"
                ext="png"
                title="Семена и Орехи"
            }}
           </li>
-          <li class="home-catalog__item">
+          <li class="shop-catalog__item">
            {{>widgets/catalog-item
                img="home/catalog/ex"
                ext="png"
