--- a/app/templates/pages/contacts.hbs
+++ b/app/templates/pages/contacts.hbs
@@ -1,8 +1,8 @@
 {{!Контакты}}
 
-{{> layout/head page-title="Contacts"}}
+{{> layout/head page-title="Контакты"}}
 
-{{> layout/header }}
+{{> layout/header current-page="contacts"}}
 <div class="internal-template internal-template--sidebar-enabled">
   <aside class="internal-template__sidebar">
     {{>blocks/common/sidebar}}
