--- a/app/templates/partials/blocks/header/header-main.hbs
+++ b/app/templates/partials/blocks/header/header-main.hbs
@@ -14,7 +14,7 @@
           <a class="header-main__link{{#ifCond current-page 'about'}} active{{/ifCond}}" href="#">о компании</a>
         </li>
         <li class="header-main__item">
-          <a class="header-main__link{{#ifCond current-page 'catalog'}} active{{/ifCond}}" href="#">каталог товаров</a>
+          <a class="header-main__link{{#ifCond current-page 'shop'}} active{{/ifCond}}" href="#">каталог товаров</a>
         </li>
         <li class="header-main__item">
           <a class="header-main__link{{#ifCond current-page 'events'}} active{{/ifCond}}" href="#">мастер-классы</a>
