--- a/app/templates/pages/shop--category.hbs
+++ b/app/templates/pages/shop--category.hbs
@@ -1,24 +1,24 @@
-{{!Каталог товаров}}
+{{!Каталог товаров / Категория (группа)}}
 
-{{> layout/head page-title="Каталог товаров"}}
+{{> layout/head page-title="Каталог товаров / Категория (группа)"}}
 
 {{> layout/header current-page="shop"}}
 <div class="internal-template internal-template--sidebar-enabled">
   <aside class="internal-template__sidebar">
-    {{>blocks/common/sidebar}}
+    {{>blocks/common/sidebar active-cat=1}}
   </aside>
   <main class="internal-template__container">
     <div class="internal-template__breadcrumbs">
       <div class="page-breadcrumbs">
         <span class="page-breadcrumbs__item"><a class="page-breadcrumbs__link" href="#">СибХЦ</a></span>
-        <span class="page-breadcrumbs__item page-breadcrumbs__item--current">Каталог товаров</span>
+        <span class="page-breadcrumbs__item page-breadcrumbs__item--current">Категория (группа)</span>
       </div>
     </div>
     <div class="internal-template__header">
-      <h1 class="internal-template__title internal-template__title--big">Каталог товаров</h1>
+      <h1 class="internal-template__title internal-template__title--big">Категория (группа)</h1>
     </div>
     <div class="internal-template__content">
-      {{>blocks/shop/main}}
+      {{>blocks/shop/category}}
     </div>
   </main>
 </div>
