--- a/app/templates/partials/blocks/common/sidebar.hbs
+++ b/app/templates/partials/blocks/common/sidebar.hbs
@@ -5,7 +5,7 @@
     <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
     <li class="sidebar-list__item"><a class="sidebar-list__link" href="#">Пункт меню</a></li>
     <li class="sidebar-list__item sidebar-list__item--parent">
-      <a class="sidebar-list__link" href="#">Пункт меню <i class="icon-arrowRight"></i></a>
+      <a class="sidebar-list__link{{#if active-cat}} sidebar-list__link--active{{/if}}" href="#">Пункт меню <i class="icon-arrowRight"></i></a>
       <ul class="sidebar-list__submenu">
         <li class="sidebar-list__item">
           <a href="#" class="sidebar-list__link">Пункт вложенного меню</a>
