add Category single

--- a/app/templates/pages/shop--category-group.hbs
+++ b/app/templates/pages/shop--category-group.hbs
@@ -18,7 +18,7 @@
       <h1 class="internal-template__title internal-template__title--big">Категория (группа)</h1>
     </div>
     <div class="internal-template__content">
-      {{>blocks/shop/category}}
+      {{>blocks/shop/category-group}}
     </div>
   </main>
 </div>
