--- a/app/templates/partials/blocks/common/sidebar.hbs
+++ b/app/templates/partials/blocks/common/sidebar.hbs
@@ -11,7 +11,7 @@
           <a href="#" class="sidebar-list__link">Пункт вложенного меню</a>
         </li>
         <li class="sidebar-list__item">
-          <a href="#" class="sidebar-list__link">Еще один пункт вложенного меню</a>
+          <a href="#" class="sidebar-list__link{{#if active-cat-2}} sidebar-list__link--active{{/if}}">Еще один пункт вложенного меню</a>
         </li>
         <li class="sidebar-list__item">
           <a href="#" class="sidebar-list__link">Третий пункт подменю</a>
