--- a/app/templates/partials/widgets/catalog-item.hbs
+++ b/app/templates/partials/widgets/catalog-item.hbs
@@ -5,5 +5,6 @@
       {{#if img}}{{>components/image no-2x=true img=img ext=ext}}{{/if}}
     </div>
     <h3 class="catalog-item__title">{{title}}</h3>
+    {{#if text}}<p class="catalog-item__description"><span>Описание:</span> {{text}}</p>{{/if}}
   </div>
 </article>
